--- a/.github/workflows/scan-build.yml
+++ b/.github/workflows/scan-build.yml
@@ -189,3 +189,36 @@ jobs:
     uses: ./.github/workflows/scan-build-steps.yml
     with:
       repo: ${{ matrix.repo }}
+
+  m11:
+    needs: [prepare-docker, split]
+    if: needs.split.outputs.matrix11 != null
+    secrets: inherit
+    strategy:
+      matrix: ${{fromJson(needs.split.outputs.matrix11)}}
+      fail-fast: false # don't stop other jobs if one fails
+    uses: ./.github/workflows/scan-build-steps.yml
+    with:
+      repo: ${{ matrix.repo }}
+
+  m12:
+    needs: [prepare-docker, split]
+    if: needs.split.outputs.matrix12 != null
+    secrets: inherit
+    strategy:
+      matrix: ${{fromJson(needs.split.outputs.matrix12)}}
+      fail-fast: false # don't stop other jobs if one fails
+    uses: ./.github/workflows/scan-build-steps.yml
+    with:
+      repo: ${{ matrix.repo }}
+
+  m13:
+    needs: [prepare-docker, split]
+    if: needs.split.outputs.matrix13 != null
+    secrets: inherit
+    strategy:
+      matrix: ${{fromJson(needs.split.outputs.matrix13)}}
+      fail-fast: false # don't stop other jobs if one fails
+    uses: ./.github/workflows/scan-build-steps.yml
+    with:
+      repo: ${{ matrix.repo }}
